--- a/kurssi.html
+++ b/kurssi.html
@@ -22,7 +22,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link bg-dark text-white active" aria-current="page" href="kurssi.html">Kurssi</a></li>
-                    <li class="nav-item"><a class="nav-link" href="toteutus.html">Toteutus</a></li>    
+                    <li class="nav-item"><a class="nav-link" href="toteutus.html">Toteutus</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tapahtumat.html">Tapahtumat</a></li>
+                    <li class="nav-item"><a class="nav-link" href="saa.html">Sää</a></li>  
                 </ul>
             </div>
         </div>
