--- a/kurssi.html
+++ b/kurssi.html
@@ -6,85 +6,99 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
 
-  
-    <!-- Navigaatiopalkki -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link bg-dark text-white active" aria-current="page" href="kurssi.html">Kurssi</a></li>
-                    <li class="nav-item"><a class="nav-link" href="toteutus.html">Toteutus</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tapahtumat.html">Tapahtumat</a></li>
-                    <li class="nav-item"><a class="nav-link" href="saa.html">Sää</a></li>  
-                </ul>
-            </div>
-        </div>
-    </nav>
 
-  
+  <!-- Navigaatiopalkki -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link bg-dark text-white active" aria-current="page"
+              href="kurssi.html">Kurssi</a></li>
+          <li class="nav-item"><a class="nav-link" href="toteutus.html">Toteutus</a></li>
+          <li class="nav-item"><a class="nav-link" href="tapahtumat.html">Tapahtumat</a></li>
+          <li class="nav-item"><a class="nav-link" href="saa.html">Sää</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
   <div id="vastaus" class="container">
     <script>
       fetch('https://jannean.github.io/jsonit/kurssitiedot.json')
 
-        // Muunnetaan vastaus JSON muotoon
+          // Muunnetaan vastaus JSON muotoon
         .then(function (response) {
           return response.json();
         })
 
-        // Käsitellään muunnettu (eli JSON muotoinen) vastaus
+          // Käsitellään muunnettu (eli JSON muotoinen) vastaus
         .then(function (responseJson) {
 
           // Testataan onnistuuko json-luku
           document.getElementById("vastaus").innerHTML = kerro(responseJson);
         })
 
-        // Jos tuli jokin virhe
+          // Jos tuli jokin virhe
         .catch(function (error) {
           document.getElementById("vastaus").innerHTML = "<p>Tietoa ei pystytä hakemaan</p>";
         })
 
 
-
       function kerro(data) {
-        var teksti = ""; // määritellään muuttuja, johon tulostettava tieto kerätään
+          // määritellään muuttuja, johon tulostettava tieto kerätään
+        var teksti = ""; 
 
-        // otsikkotiedon hakeminen ja sijoittaminen h1-elementtiin 
+          // otsikkotiedon hakeminen ja sijoittaminen h1-elementtiin 
         teksti = "<h1>" + data.otsikko + "</h1>";
 
-        // tähän tulee muiden tietojen käsittely kohta
+          // haetaan kurssin kuvaus
         teksti = teksti + "<p>" + data.kuvaus + "</p>"
-        teksti = teksti + "<p><img src='" + data.kuva + "' alt='kuva' ></p>"
+
+          // haetaan kuva, jolle annetaan alt-teksti
+        teksti = teksti + "<p><img src='" + data.kuva + "' alt='kurssikuva' ></p>"
+
+          // tehdään väliotsikko, johon haetaan kurssin nimi, tunnus ja opintopisteiden määrä
         teksti = teksti + "<h3>Opintojakso: " + data.opintojakso.nimi + " " + data.opintojakso.tunnus +
-                          " " + data.opintojakso.opintopisteet + " op" + "</h3>";
+          " " + data.opintojakso.opintopisteet + " op" + "</h3>";
+
+          // aloitetaan lista
         teksti = teksti + "<ul>"
+
+          // listataan opintojakson sisältö silmukan avulla
         for (var i in data.opintojakso.sisalto) {
           teksti = teksti + "<li>" + data.opintojakso.sisalto[i] + "</li>";
         }
+
+          // lopetetaan lista
         teksti = teksti + "</ul>"
 
-        teksti = teksti +"<h3>" + "Linkit" + "</h3>";
+         // lisätään väliotsikoksi "Linkit"
+        teksti = teksti + "<h3>" + "Linkit" + "</h3>";
 
+          // aloitetaan lista
         teksti = teksti + "<ul>"
+
+          // käydään silmukalla läpi kurssin aiheet ja tehdään vierelle linkki aiheeseen liittyvälle sivustolle
         for (var i in data.tekniikat) {
           teksti = teksti + "<li>" + data.tekniikat[i].aihe + " <a href='" + data.tekniikat[i].linkki + "'>" + data.tekniikat[i].linkki + "</a></li>";
         }
+
+          // lopetetaan lista
         teksti = teksti + "</ul>"
 
-
-        // palautetaan teksti
+          // palautetaan teksti
         return teksti;
       }
-
-
     </script>
   </div>
 </body>
