--- a/tapahtumat.html
+++ b/tapahtumat.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Tämä sivu käyttää tyylitiedosta -->
     <link rel="stylesheet" href="tapahtumat.css">
 </head>
 
@@ -36,6 +37,7 @@
 
     <div id="vastaus" class="container">
         <script>
+                // Haetaan tiedot
             fetch('https://api.visittampere.com/api/v1/visittampere/event/published/all/?for mat=json&lang=fi')
 
                 // Muunnetaan vastaus JSON muotoon
@@ -53,17 +55,28 @@
                 })
 
 
-            
+                    // tehdään funktio, joka suoritetaan Json-haun onnistuttua
                 function tapahtumat(data) {
+
+                        // määritellään muuttuja, johon tulostettava tieto kerätään
                     var teksti = "";
+
+                        // listätään otsikko
                     teksti = "<h1>Tampereella tapahtuu</h1>";
-                    //Käydään läpi tapahtumia. Tapahtumien määrä rajoitettu viiteentoista
+
+                        // listataan tapahtumia. Tapahtumien määrä rajoitettu viiteentoista niiden suuren määrän takia
                     for (var i = 0; i < 15; i++) {
+                            // lisätään jokaiselle tapahtumalle otsikko
                         teksti = teksti + "<h3>" + data[i].title + "</h3>";
+                            
+                            // lisätään jokaiselle tapahtumalle kuvaus
                         teksti = teksti + "<p>" + data[i].description + "</p>";
+
+                            // lisätään jokaiselle tapahtumalle linkki
                         teksti = teksti + "<p> <a href=" + data[i].url + ">" + data[i].url + "</a></p>";
                     }
-                    // palautetaan teksti
+
+                        // palautetaan teksti
                     return teksti;
                 }
         </script>
